[package]
name = "import_fields"
version = "0.1.0"
authors = ["Marco Napetti <nappa85@therocktrading.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0", features = ["full"] }
proc-macro2 = { version = "1.0", default-features = false }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
